# language-idl

./: CHANGELOG.md  LICENSE  language-idl.cabal
app/: Main.hs  test.idl  test_simple.idl
language-idl/: language-idl.cabal
language-idl-proto/: CHANGELOG.md  language-idl-proto.cabal
language-idl-proto/app/: Main.hs  basic_module_test.idl  test_simple.idl
language-idl-proto/src/Idl/: Proto.hs
language-idl-proto/src/Idl/Proto/: Ast.hs  Simplify.hs
language-idl/app/: test_simple.idl
language-idl/src/Idl/: Ast2.hs  Lexer.x  Parser.hs  Parser2.y  Simplify.hs
language-idl/src/Idl/Parser/: Ast.hs  Lexer.x  Parser.y
src/: Proto.hs
src/Idl/: Ast2.hs  Lexer.x  Parser2.hs  Parser2.y
