cabal-version:      3.0
name:               language-idl-proto
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Patrik Pettersson
maintainer:         pettersson.pa@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Idl.Proto, Idl.Proto.Simplify, Idl.Proto.Ast
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      text >= 2.1.2,
                      Stack,
                      containers,
                      prettyprinter,
                      mtl,
                      transformers,
                      language-idl,
                      filepath
    hs-source-dirs:   src
    default-language: Haskell2010

executable language-idl-proto
  main-is: Main.hs
  build-depends:
    base ^>=4.18.3.0,
    text,
    language-idl,
    language-idl-proto,
    mtl
  hs-source-dirs: app
  default-language: Haskell2010

