cabal-version:      3.0
name:               language-idl
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Patrik Pettersson
maintainer:         pettersson.pa@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Idl.Simplify
      Idl.Parser
    other-modules:
      Idl.Parser.Ast
      Idl.Parser.Lexer
      Idl.Parser.Parser
    -- other-extensions:
    build-tool-depends: alex:alex >=3.5.4.0,
                        happy:happy
    build-depends:    base ^>=4.18.3.0,
                      array,
                      transformers,
                      text >= 2.1.2,
                      mtl,
                      containers,
                      filepath
    hs-source-dirs:   src
    default-language: Haskell2010
